# advent-of-code-2020

./: .gitignore  CODE_OF_CONDUCT.md  README.md  progress.org
src/: Cargo.toml
src/day01-star1/: Cargo.toml
src/day01-star1/src/: main.rs
src/day01-star2/: Cargo.toml
src/day01-star2/src/: main.rs  test_data.rs
src/day02-star1/: Cargo.toml
src/day02-star1/src/: main.rs
src/day02-star2/: Cargo.toml
src/day02-star2/src/: main.rs  test_data.rs
src/day03-star1/: Cargo.toml
src/day03-star1/src/: main.rs  test_data.rs
src/day03-star2/: Cargo.toml
src/day03-star2/src/: main.rs  test_data.rs
src/day04-star1/: Cargo.toml
src/day04-star1/src/: main.rs  test_data.rs
src/day04-star2/: Cargo.toml
src/day04-star2/src/: main.rs  test_data.rs
src/day05-star1/: Cargo.toml
src/day05-star2/: Cargo.toml
src/day06-star1/: Cargo.toml
src/day06-star2/: Cargo.toml
src/day07-star1/: Cargo.toml
src/day07-star1/src/: main.rs  test_data.rs
src/day07-star2/: Cargo.toml
src/day08-star1/: Cargo.toml
src/day08-star2/: Cargo.toml
src/day09-star1/: Cargo.toml
src/day09-star2/: Cargo.toml
src/day10-star1/: Cargo.toml
src/day10-star2/: Cargo.toml
src/day10-star2/src/: lib.rs  main.rs  repro.rs
src/day11-star1/: Cargo.toml
src/day11-star2/: Cargo.toml
src/day12-star1/: Cargo.toml
src/day12-star2/: Cargo.toml
src/day13-star1/: Cargo.toml
src/day13-star2/: Cargo.toml
src/day14-star1/: Cargo.toml
src/day14-star2/: Cargo.toml
src/day15-star1/: Cargo.toml
src/daya-starb/: Cargo.toml
src/lucio/: Cargo.toml
src/lucio/src/: day.rs  (+1 more)
(+61 files in other folders)
