[package]
name = "day07-star1"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serde_json = "1.0.45"
lucio = { path = "../lucio" }

[dependencies.petgraph]
version = "0.5"
features = ["serde-1"]
