[package]
name = "day10-star2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_matches = "1.5"
num-integer = "0.1"
permutator = "0.4.0"

# why can't assert_matches compile as a dev-dependency?